--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 version: '3'
 networks:
   db:
-  services:
+  web:
 services:
   mongodb:
+    restart: always
     image: mongo:latest
     environment: 
       - MONGO_DATA_DIR=/data/db
@@ -21,6 +22,17 @@ services:
       - PORT=5000
     networks:
       - db
-      - services
+      - web
     ports:
       - 5000:5000
+  frontend:
+    build: ./plutus-app
+    networks:
+      - web
+    volumes:
+      - /etc/localtime:/etc/localtime
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - plutus-service
+    ports:
+      - 80:80
