--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
     environment:
       - DB=mongodb
       - PORT=5000
+      - SECRET={yourJwtSecretKey}
+      - SECRETKEY={yourCriptoSecretKey}
     networks:
       - db
       - web
