--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -21,8 +21,6 @@ gzip_types
 server {
   listen 80;
   server_name example.org;
-  root   /usr/share/nginx/html;
-  index  index.html;
 
   location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -37,6 +35,13 @@ server {
     listen 443 ssl;
     server_name example.org;
     server_tokens off;
+
+    root   /usr/share/nginx/html;
+    index  index.html;
+
+    location / {
+      try_files $uri $uri/ /index.html;
+    }
 
     ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
@@ -54,13 +59,14 @@ server {
       proxy_http_version 1.1;
     }
 
-  location @rewrites {
-    rewrite ^(.+)$ /index.html last;
-  }
 
-  location ~* \.(?:ico|css|js|gif|jpe?g|png|svg|ttf)$ {
-    expires max;
-    add_header Pragma public;
-    add_header Cache-Control "public, must-revalidate, proxy-revalidate";
-  }
+    location @rewrites {
+      rewrite ^(.+)$ /index.html last;
+    }
+
+    location ~* \.(?:ico|css|js|gif|jpe?g|png|svg|ttf)$ {
+      expires max;
+      add_header Pragma public;
+      add_header Cache-Control "public, must-revalidate, proxy-revalidate";
+    }
 }
